--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 <header class="header">
   <div class="logo">
     <img src="logo.jpg" alt="DL Logo">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </div>
   <nav class="nav-links">
-  <a href="#home">Home</a>
-  <a href="#services">Services</a>
-  <a href="#about">About</a>
-  <a href="#contact">Contact</a>
+    <a href="#home">Home</a>
+    <a href="#services">Services</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
   </nav>
 </header>
+
+
 
 
   <main>
