Add SEO meta tags for search visibility

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+
+   <!-- SEO Meta Tags -->
+  <meta name="description" content="Digitalised Learning SA offers interactive Maths Literacy online extra classes for Grade 10, 11, and 12 students in South Africa.">
+  <meta name="keywords" content="Maths literacy online extra classes, Maths literacy grade 10, Maths literacy grade 11, Maths literacy grade 12, online learning, digital education, South Africa, extra classes, high school maths">
+  <meta name="author" content="Digitalised Learning SA">
 </head>
 <body>
 
