--- a/index.html
+++ b/index.html
@@ -12,16 +12,12 @@
 </head>
 <body>
 
-<div class="page-title-wrapper">
-  <h1 class="page-title">Digitalised Learning SA</h1>
-</div>
-
-
 <header class="header">
-  <div class="logo">
+ <div class="branding">
     <img src="logo.jpg" alt="DL Logo">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <span class="site-title">Digitalised Learning SA</span>
   </div>
+
   <nav class="nav-links">
     <a href="#home">Home</a>
     <a href="#services">Services</a>
