Updated services section and embedded YouTube

--- a/index.html
+++ b/index.html
@@ -65,15 +65,25 @@
   </p>
 </section>
 
-  <section class="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Online Extra Classes: Grades 10–12</li>
-      <li>Maths Literacy</li>
-      <li>Monthly fee: R80</li>
-    </ul>
-    <section class="services" id="services"></section>
-  </section>
+<section class="services" id="services">
+  <h2>Our Services</h2>
+  <ul>
+    <li>
+      Grade 10–12 Online Extra Classes
+      <ul>
+        <li>Mathematical Literacy</li>
+        <li>Weekly Classes at R80 per month</li>
+      </ul>
+    </li>
+    <li>
+      YouTube Videos –
+      <a href="https://youtube.com/@digitalisedlearningsa?si=2z19iol46RhAuVEY" target="_blank">
+        Visit our Channel
+      </a>
+    </li>
+    <li>One-on-One Tailor Made Classes</li>
+  </ul>
+</section>
 
   
 <section id="contact" class="contact-section">
